Fix bug filters on mobile

--- a/src/WBB/CoreBundle/Resources/public/css/main.css
+++ b/src/WBB/CoreBundle/Resources/public/css/main.css
@@ -384,16 +384,15 @@
   #editprofile #view-account.mobile {width: 100%; padding-right: 0; padding-left: 0;}
 
   #editprofile.mobile #view-account .ui .btn-editprofile .btn {font-size: 16px;}
-  #editprofile.mobile #view-account .ui .filter-profil a.ui-radio {font-size: 13px; line-height: 17px; padding-top: 9px; white-space: pre-line; width: 130px;}
+  #editprofile.mobile #view-account .ui .filter-profil a.ui-radio {font-size: 14px; width: 140px; line-height: 17px; padding-top: 9px; white-space: pre-line;}
   #editprofile.mobile #view-account .ui .block-top {width: auto;}
   #editprofile.mobile #view-account .ui .sort-by label {display: none;}
   #editprofile.mobile #view-account .ui .sort-by.six.columns {width: 56.6667%; margin-left: 0;}
   #editprofile.mobile #view-account .ui .container {width: 100%!important;}
   #editprofile.mobile #view-account .ui .filter-view a.ui-radio {color: transparent;}
-  #editprofile.mobile #view-account .ui .filter-view .right {margin: 0 20px 0 0;}
   #editprofile.mobile #view-account .ui .filter-view a:nth-child(2) {margin-left: 2px;}
-  #editprofile.mobile #view-account .ui .filter-profil {width: 285px;}
-  #editprofile.mobile #view-account .ui .list-bars .col-4 {width: 50%; position: relative; left: -1px;}
+  #editprofile.mobile #view-account .ui .filter-profil {width: auto; padding: 0 10px;}
+  #editprofile.mobile #view-account .ui .ui-radio.collapsed:first-of-type {padding-right: 10px;}
   #editprofile.mobile #view-account .ui .ui-radio.collapsed:first-of-type,
   #editprofile.mobile #view-account .ui .ui-radio.collapsed:last-of-type {width: 75px!important;}
 
@@ -580,7 +579,6 @@
     .bar-details .also-appears .h2 {text-align: center;}
     .sub-header .star-share .btn-round.star:hover {background-color: transparent!important;}
     .sub-header .title h3 {font-size: 16px; line-height: 20px; width: 78%; margin: auto;}
-    #editprofile {padding: 0 10px;}
     section.bars .bar-w-pic {min-height: 119px;}
     section.bars .bar-w-pic:first-child {min-height: 239px;}
     section.bar-filter .bar-w-pic {height: 119px;}
